aws-eire/poc-files/docker-stuff/haproxy/ext-mick-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc
  #annotations:
    #service.beta.kubernetes.io/aws-load-balancer-backend-protocol: (https|http|ssl|tcp)
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
    - name: ejb
      port: 4447
      targetPort: 4447
  selector:
    app: haproxy
  type: ExternalName
  externalName: enmonaws.athtem.eei.ericsson.se
