aws-eire/poc-files/docker-stuff/haproxy/httpd-microui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpd-microui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: cmserv.app.enmaas.io
    http:
      paths:
      - path: /
        backend:
          serviceName: httpd-micro
          servicePort: 443
  tls:
  - hosts:
    - cmserv.app.enmaas.io
